recursion.lessons.recursion.tree.Tree.scala.error
Tree:26: error: etape is already defined as variable etape
		var etape = steps + 1;
                    ^